Fixed the spacing in room

--- a/static/css/room.css
+++ b/static/css/room.css
@@ -21,7 +21,7 @@
 
 .row-fluid > .span-fixed-sidebar {
   padding-right: 20px;
-  margin-left: 400px;
+  margin-left: 440px;
 }
 
 .name-list {
